<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_addTasks"
        android:name="com.example.myapplication.ui.addTasks.AddTasksFragment"
        android:label="@string/title_add"
        tools:layout="@layout/fragment_addtasks" />

    <fragment
        android:id="@+id/navigation_done"
        android:name="com.example.myapplication.ui.done.DoneFragment"
        android:label="@string/title_done"
        tools:layout="@layout/fragment_done" />
</navigation>