<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addTasks.AddTasksFragment">


    <ScrollView
        android:layout_width="398dp"
        android:layout_height="420dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="151dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="900dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtTitle1"
                android:layout_width="343dp"
                android:layout_height="71dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                app:boxBackgroundMode="outline"
                app:startIconDrawable="@drawable/baseline_title_24"
                app:startIconTint="@color/purple_700">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:backgroundTint="#FFFFFF"
                    android:gravity="top"
                    android:hint="@string/tasks_title"
                    android:inputType="text|textAutoCorrect|textCapWords" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="343dp"
                android:layout_height="90dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtDate1"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundMode="outline"
                    app:startIconDrawable="@drawable/baseline_date_range_24"
                    app:startIconTint="@color/purple_700">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextDate"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:backgroundTint="#FFFFFF"
                        android:gravity="top"
                        android:hint="@string/date"
                        android:inputType="datetime|date" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btndate"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:text="Date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="343dp"
                android:layout_height="90dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="30dp"
                android:orientation="horizontal">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtTime"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="10dp"
                    app:boxBackgroundMode="outline"
                    app:startIconDrawable="@drawable/baseline_access_time_24"
                    app:startIconTint="@color/purple_700">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/textInputEditTextTime"
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:backgroundTint="#FFFFFF"
                        android:gravity="top"
                        android:hint="@string/time"
                        android:inputType="datetime|time" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnTime"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="0dp"
                    android:layout_weight="1"
                    android:text="Time" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtData"
                android:layout_width="343dp"
                android:layout_height="82dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="40dp"
                android:gravity="top"
                app:boxBackgroundMode="outline"
                app:startIconDrawable="@drawable/baseline_add_task_24"
                app:startIconTint="@color/purple_700">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textInputEditTextData"
                    android:layout_width="match_parent"
                    android:layout_height="69dp"
                    android:layout_gravity="top"
                    android:backgroundTint="#FFFFFF"
                    android:gravity="top"
                    android:hint="@string/todo"
                    android:inputType="text|textMultiLine"
                    android:maxLines="3"
                    android:overScrollMode="always"
                    tools:gravity="start" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="120dp"
                android:backgroundTint="#6200EE"
                android:drawableLeft="@drawable/baseline_save_24"
                android:onClick="ActionSave"
                android:text="Save" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>